[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/places/features/Feature.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Feature" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="1"]

centered = false

[node name="Square" type="Line2D" parent="." index="2"]

visible = false
points = PoolVector2Array(  )
width = 1.0
default_color = Color( 0, 0, 0, 1 )
texture_mode = 868860016
sharp_limit = 2.0
round_precision = 8

[connection signal="input_event" from="." to="." method="_on_input_event"]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]


